--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                     </div>
                 </div>
                 <div class="container copyright">
-                    <p>&copy; <a href="#">Diana Nyakuna</a>, All Right Reserved | Designed By <a href="https://gmail.com/francismakonjio2@gmail.com">Makonjio</a></p>
+                    <p>&copy; <a href="#">Diana Nyakuna</a>, All Right Reserved | Designed By <a href="https://github.com/MAKONJIO99">Makonjio</a></p>
                 </div>
             </div>
         </div>
