--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                         <h3>Eldoret, Uasin gishu, Kenya</h3>
                         <div class="footer-menu">
                             <p>+254 718 023 004</p>
-                            <p>dnyakuna@gmail.com</p>
+                            <p><a href=mailto:dnyakuna@gmail.com?subject="HTML link">Click here to send us an email!!!</a></p>
                         </div>
                         <div class="footer-social">
                             <a href=""><i class="fab fa-twitter"></i></a>
